Changed the number of skills

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 	  <ul>
 	  	<li>Team work</li>
 	  	<li>Adaptable</li>
-	  	<li>Great Appetite</li>
+	  	<li>Customer service</li>
+	  	<li>Visio</li>
 	  </ul>
 
 	  <h3>Job History</h3>
