--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 	  <img src="images/pup.jpeg" width ='400px'>
 	  <img src="images/pup.jpeg" width ='400px'>
 
-	  <h1>Portfolio: Tanyaradzwa Saruchera</h1>
-	  <h2>Past Experience</h2>
-	  <h3>Biography</h3>
+	  <h1>A closer look: Tanyaradzwa Saruchera</h1>
+
+	   <h3>Biography</h3>
 
 	  <p>I am a wonderfully clumsy person who shouldn't be allowed near hot drinks as the possibility of injury is very possible. 
 	  </p>
 
+	  <h2>CV</h2>
+
+	
 	  <h3> Skills</h3>
 
 	  <ul>
