--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<title>Portfolio: Tanyaradzwa Saruchera:</title>
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 	<body>
 
-		<nav>
+		<nav class="leftspace">
 			<a href="index.html">Home</a>
 			<a href="portfolio.html">Portfolio</a>
 		</nav>
@@ -16,14 +17,14 @@
 	  <img src="images/pup.jpeg" width ='400px'>
 	  <img src="images/pup.jpeg" width ='400px'>
 
-	  <h1>A closer look: Tanyaradzwa Saruchera</h1>
+	  <h1>Tanyaradzwa Saruchera</h1>
 
 	   <h3>Biography</h3>
 
 	  <p>I am a wonderfully clumsy person who shouldn't be allowed near hot drinks as the possibility of injury is very possible. 
 	  </p>
 
-	  <h2>CV</h2>
+	  <h3>CV</h3>
 
 	
 	  <h3> Skills</h3>
