Stage 3 design:Completish

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 
 
-	  <img src="images/pup.jpeg" width ='400px'>
-	  <img src="images/pup.jpeg" width ='400px'>
-	  <img src="images/pup.jpeg" width ='400px'>
+	  <img  src="images/pup.jpeg" >
+	  <img  src="images/pup.jpeg" >
+	  <img  src="images/pup.jpeg" >
 
 	  <h1>Tanyaradzwa Saruchera</h1>
 
