--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 </head>
+<link rel="stylesheet" type="text/css" href="css/index.css">
 <body>
 
 	<div>
@@ -13,11 +14,11 @@
 
 	<h1>Portfolio</h1>
 	<h3>Brazilian Funk</h3>
-	<img src="https://i.ytimg.com/vi/goDrtm7_Mm4/maxresdefault.jpg" width= '400px'>
+	<img src="https://i.ytimg.com/vi/goDrtm7_Mm4/maxresdefault.jpg">
 	<h3>Dancehall</h3>
-	<img src="images/pup.jpeg" width='400px'>
+	<img  src="images/pup.jpeg">
 	<h3>Afrobeat</h3>
-	<img src="images/Afrobeat.jpeg" width ='400px'>
+	<img src="images/Afrobeat.jpeg">
 
 </body>
 </html>
