--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  <img  src="images/pup.jpeg" >
 	  <img  src="images/pup.jpeg" >
 
-	  <h1>Tanyaradzwa Saruchera</h1>
+	  <h1>Portfolio: Tanyaradzwa Saruchera</h1>
 
 	   <h3>Biography</h3>
 
