2nd Morning sess

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Portfolio: Tanyaradzwa Saruchera:</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet">
 	</head>
 	<body>
 
@@ -13,9 +14,9 @@
 
 
 
-	  <img  src="images/pup.jpeg" >
-	  <img  src="images/pup.jpeg" >
-	  <img  src="images/pup.jpeg" >
+	  <img class="curveEdges" src="images/pup.jpeg" >
+	  <img class="curveEdges"  src="images/pup.jpeg" >
+	  <img class="curveEdges"  src="images/pup.jpeg" >
 
 	  <h1>Portfolio: Tanyaradzwa Saruchera</h1>
 
