--- a/portfolio.html
+++ b/portfolio.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet">
 </head>
-<link rel="stylesheet" type="text/css" href="css/index.css">
+
 <body>
 
 	<div>
@@ -14,11 +16,11 @@
 
 	<h1>Portfolio</h1>
 	<h3>Brazilian Funk</h3>
-	<img src="https://i.ytimg.com/vi/goDrtm7_Mm4/maxresdefault.jpg">
+	<img class="curveEdges" src="https://i.ytimg.com/vi/goDrtm7_Mm4/maxresdefault.jpg">
 	<h3>Dancehall</h3>
-	<img  src="images/pup.jpeg">
+	<img class="curveEdges"  src="images/pup.jpeg">
 	<h3>Afrobeat</h3>
-	<img src="images/Afrobeat.jpeg">
+	<img class="curveEdges"  src="images/Afrobeat.jpeg">
 
 </body>
 </html>
