3rd Morning change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 
-		<nav class="leftspace">
+		<nav class="TopNavBar">
 			<a href="index.html">Home</a>
 			<a href="portfolio.html">Portfolio</a>
 		</nav>
@@ -25,7 +25,7 @@
 	  <p>I am a wonderfully clumsy person who shouldn't be allowed near hot drinks as the possibility of injury is very possible. 
 	  </p>
 
-	  <h3>CV</h3>
+	  <h3>Past Experience</h3>
 
 	
 	  <h3> Skills</h3>
